welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: '<-' expected but ')' found.
	for (i <= 0 to T.length-1) {
                                 ^Array1:16: error: illegal start of simple expression
}
^